--- a/404.html
+++ b/404.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Redirigiendo...</title>
-    <script type="text/javascript">
-      // Script para manejar el enrutamiento de SPA en GitHub Pages
-      (function() {
-        var path = window.location.pathname;
-        var newPath = path.substring(path.lastIndexOf('/'));
-        // Reemplaza la ruta actual con la ruta base de tu app (si es necesario, a menudo solo '/')
-        window.location.replace('ivandelno.github.io/sanedrin-fantasy-football/index.html'); 
-        // Asegúrate de cambiar 'tu-nombre-de-usuario/tu-repo' por los datos reales de tu repositorio.
-        // Si usas un dominio personalizado, simplemente usa window.location.replace(newPath);
-      })();
-    </script>
-  </head>
-  <body>
-  </body>
+<head>
+  <script type="text/javascript">
+    // Script para manejar el problema de F5/Recarga en GitHub Pages para SPAs.
+
+    // El nombre del repositorio (subdirectorio) en GitHub Pages
+    const repoName = '/sanedrin-fantasy-football/';
+
+    // Obtener la ruta de la URL actual
+    const path = window.location.pathname;
+    
+    // Verificar si la ruta actual coincide con el inicio del repositorio
+    if (path.startsWith(repoName)) {
+        // Reconstruir la ruta eliminando el nombre del repositorio
+        const subPath = path.substring(repoName.length);
+        
+        // Si hay una subruta, redirigir a index.html y usar el path como hash
+        if (subPath && subPath !== 'index.html') {
+            window.location.replace(repoName + 'index.html#' + subPath);
+        }
+    }
+  </script>
+</head>
+<body>
+  <p>Redirigiendo a la página principal...</p>
+</body>
 </html>
